----------
v6.2.0-git
----------

[mms] Add checks to ensure that saved session expiration message was created by
      the user rather than an outside source.
[mms] Improved handling for multiple expand/collapse actions in the dynamic
      folder list (Bug #13170).
[mms] Provide visual UI info to user that file is uploading when drag/drop
      attachments in dynamic view.


------------
v6.2.0alpha1
------------

[mms] Don't set References header in reply message if equal to In-Reply-To
      header (RFC 5322 [3.6.4]).
[mms] Add configurable IMAP quota checking interval (Request #12907).
[mms] Honor 'from_link' preference in dynamic view.
[mms] Add support for storing image data within HTML signatures.
[mms] Ensure that viewing large mailboxes does not overload the session
      storage size.
[mms] Implement web notifications for new mail alerts.
[mms] Add bare address information to title attribute in viewport on dynamic
      mailbox page
[mms] Display flags on the smartmobile mailbox page (Request #12687).
[mms] Support non-ASCII characters in user-defined flag names (Request #12335).
[mms] Potentially save a call to the contacts backend when viewing HTML
      messages if no image data is present in the message.
[mms] Improved styling of dynamic mailbox page, to fix issues when resizing the
      browser font size (Bug #13071).
[mms] Don't send as multipart/alternative if plaintext part is empty.
[mms] Add smiley data to message when added via the HTML editor (Request
      #13051).
[mms] Add mailbox size information retrieval to dynamic view (Request #12965).
[mms] Display unread message count in title via favicon bubbles, if browser
      supports.
[mms] Abstracted maillog code.
[mms] Enable configuration of IMAP cache lifetime for Horde_Cache and
      Hashtable backends.
[mms] Only refresh quota information when switching to a mailbox the first
      time.
[mms] More efficiently store mailbox cache information in the session.