@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression where creating a mailbox that is currently a container would not subscribe to that mailbox.
 * [mms] Add checks to ensure that saved session expiration message was created by the user rather than an outside source.
 * [mms] Improved handling for multiple expand/collapse actions in the dynamic folder list (Bug #13170).
 * [mms] Provide visual UI info to user that file is uploading when drag/drop attachments in dynamic view.
@@ -3595,6 +3596,7 @@
    <date>2014-05-05</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression where creating a mailbox that is currently a container would not subscribe to that mailbox.
 * [mms] Add checks to ensure that saved session expiration message was created by the user rather than an outside source.
 * [mms] Improved handling for multiple expand/collapse actions in the dynamic folder list (Bug #13170).
 * [mms] Provide visual UI info to user that file is uploading when drag/drop attachments in dynamic view.
