@@ -2,6 +2,8 @@
 v6.2.0-git
 ----------
 
+[mms] Fix regression where creating a mailbox that is currently a container
+      would not subscribe to that mailbox.
 [mms] Add checks to ensure that saved session expiration message was created by
       the user rather than an outside source.
 [mms] Improved handling for multiple expand/collapse actions in the dynamic
